--- a/php/dockerfiles/Dockerfile
+++ b/php/dockerfiles/Dockerfile
@@ -2,7 +2,7 @@ FROM php:apache
 
 RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
-RUN apt-get update; apt-get install -y vim;
+RUN apt-get update && apt-get install -y vim;
 
 COPY . /var/www/html/
 
