--- a/php/dockerfiles/Dockerfile
+++ b/php/dockerfiles/Dockerfile
@@ -4,6 +4,6 @@ RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
 RUN apt-get update && apt-get install -y vim;
 
-COPY . /var/www/html/
+COPY ./app/* /var/www/html/
 
 EXPOSE 80
