--- a/php/dockerfiles/Dockerfile-withENTRYPOINT
+++ b/php/dockerfiles/Dockerfile-withENTRYPOINT
@@ -4,6 +4,6 @@ COPY . /var/www/html/
 
 EXPOSE 80
 
-ENTRYPOINT ['php', '-f']
+ENTRYPOINT ["php", "-f"]
 
-CMD ['/var/www/html/index.php']
+CMD ["/var/www/html/index.php"]
