--- a/php/dockerfiles/Dockerfile-withARG
+++ b/php/dockerfiles/Dockerfile-withARG
@@ -2,6 +2,8 @@ ARG VERSION=apache
 
 FROM php:${VERSION}
 
+RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
+
 COPY . /var/www/html/
 
 EXPOSE 80
