--- a/php/dockerfiles/Dockerfile-withVOLUME
+++ b/php/dockerfiles/Dockerfile-withVOLUME
@@ -1,5 +1,7 @@
 FROM php:apache
 
+RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
+
 COPY . /var/www/html/
 
 VOLUME ['/var/www/html/']
