--- a/php/dockerfiles/Dockerfile-withARG
+++ b/php/dockerfiles/Dockerfile-withARG
@@ -1,10 +1,10 @@
 ARG VERSION=apache
 
+ARG TARGETPLATFORM arm
+
 FROM php:${VERSION}
 
-ARG TARGETPLATFORM 
-
-RUN echo "Building for $TARGETPLATFORM platform"
+RUN echo "Building for linux/$TARGETPLATFORM platform"
 
 RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
