modifications withARG and VOLUME

--- a/php/dockerfiles/Dockerfile-withVOLUME
+++ b/php/dockerfiles/Dockerfile-withVOLUME
@@ -4,6 +4,6 @@ RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
 COPY . /var/www/html/
 
-VOLUME ['/var/www/html/']
+VOLUME ["/var/www/html/"]
 
 EXPOSE 80
