--- a/php/dockerfiles/Dockerfile-withHEALTHCHECK
+++ b/php/dockerfiles/Dockerfile-withHEALTHCHECK
@@ -4,7 +4,7 @@ RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
 COPY . /var/www/html/
 
-STOPSIGNAL SIGTERM
+STOPSIGNAL SIGNONE
 
 HEALTHCHECK --retries=1 CMD /etc/init.d/apache2 status
 
