--- a/php/dockerfiles/Dockerfile-withSTOPSIGNAL
+++ b/php/dockerfiles/Dockerfile-withSTOPSIGNAL
@@ -4,6 +4,6 @@ RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
 COPY . /var/www/html/
 
-STOPSIGNAL SIGKILL
+STOPSIGNAL SIGWINCH
 
 EXPOSE 80
