--- a/php/dockerfiles/multistage-build/Dockerfile
+++ b/php/dockerfiles/multistage-build/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:7
 
 ARG APPDIR=/app/java
 
-COPY ./java/ ${APPDIR}
+COPY ./java/ $APPDIR
 
-RUN javac ${APPDIR}/HelloWorld.java
+RUN javac $APPDIR/HelloWorld.java
 
 CMD ["java","${APPDIR}/HelloWorld"]
