--- a/php/dockerfiles/multistage-build/Dockerfile
+++ b/php/dockerfiles/multistage-build/Dockerfile
@@ -1,9 +1,9 @@
 FROM openjdk:7
 
-ARG APPDIR=/app/java
+ARG APPDIR=app/java
 
 COPY ./java/ $APPDIR
 
 RUN javac $APPDIR/HelloWorld.java
 
-CMD ["java","${APPDIR}/HelloWorld"]
+CMD ["java","$APPDIR/HelloWorld"]
