--- a/php/dockerfiles/multistage-build/Dockerfile
+++ b/php/dockerfiles/multistage-build/Dockerfile
@@ -2,8 +2,10 @@ FROM openjdk:7
 
 ARG APPDIR=app/java
 
+ENV APPDIR $APPDIR
+
 COPY ./java/ $APPDIR
 
 RUN javac $APPDIR/HelloWorld.java
 
-CMD ["java","${APPDIR}/HelloWorld"]
+CMD java ${APPDIR}/HelloWorld
