creating helloworld-db app

--- a/php/dockerfiles/Dockerfile
+++ b/php/dockerfiles/Dockerfile
@@ -2,6 +2,6 @@ FROM php:apache
 
 RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
-COPY . /var/www/html/
+COPY ./index.php /var/www/html/
 
 EXPOSE 80
