--- a/php/dockerfiles/Dockerfile-withHEALTHCHECK
+++ b/php/dockerfiles/Dockerfile-withHEALTHCHECK
@@ -2,7 +2,7 @@ FROM php:apache
 
 RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
-COPY . /var/www/html/
+COPY ./index.php /var/www/html/
 
 HEALTHCHECK --retries=1 CMD /etc/init.d/apache2 status
 
