--- a/php/dockerfiles/Dockerfile-withWORKDIR
+++ b/php/dockerfiles/Dockerfile-withWORKDIR
@@ -4,6 +4,6 @@ WORKDIR /var/www/html/
 
 RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
-COPY . .
+COPY ./index.php .
 
 EXPOSE 80
