--- a/php/dockerfiles/Dockerfile-withARG
+++ b/php/dockerfiles/Dockerfile-withARG
@@ -8,6 +8,6 @@ RUN echo "Building for linux/$TARGETPLATFORM platform"
 
 RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
-COPY . /var/www/html/
+COPY ./index.php /var/www/html/
 
 EXPOSE 80
