create apache with php pdo image

--- a/php/app/random-named-helloworld-microservices/api/getNameAPI/Dockerfile
+++ b/php/app/random-named-helloworld-microservices/api/getNameAPI/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:apache
+FROM judejp/apache-php-pdo
 
 ENV DB_NAME helloworld
 ENV DB_USERNAME root
@@ -7,7 +7,6 @@ ENV DB_PASSWORD root
 COPY . /var/www/html/
 
 RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf \ 
-&& docker-php-ext-install pdo_mysql \ 
 && a2enmod rewrite
 
 EXPOSE 80
