--- a/php/app/random-named-helloworld-microservices/ui/getNameUI/Dockerfile
+++ b/php/app/random-named-helloworld-microservices/ui/getNameUI/Dockerfile
@@ -1,10 +1,7 @@
 FROM php:apache
 
-ENV API_GETNAME_NAME getname_api
-
 COPY . /var/www/html/
 
-RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf \ 
-&& docker-php-ext-install pdo_mysql
+RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
 EXPOSE 80
