--- a/php/app/random-named-helloworld-microservices/ui/insertNameUI/Dockerfile
+++ b/php/app/random-named-helloworld-microservices/ui/insertNameUI/Dockerfile
@@ -6,7 +6,6 @@ ENV DB_PASSWORD root
 
 COPY . /var/www/html/
 
-RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf \ 
-&& docker-php-ext-install pdo_mysql
+RUN sed -i '1s/^/ServerName localhost\n/' /etc/apache2/apache2.conf
 
 EXPOSE 80
