--- a/php/app/random-named-helloworld-microservices/docker-compose.yml
+++ b/php/app/random-named-helloworld-microservices/docker-compose.yml
@@ -45,8 +45,8 @@ services:
     
     dbvisualiser:
         image: phpmyadmin/phpmyadmin
-        links:
-            - db
+        environment:
+            - PMA_HOST=db
         ports:
             - "8082:80"
 volumes: 
